--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=3d9ce370097372ffa6b83b6beca1823d
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:admin@127.0.0.1:3306/api_news?serverVersion=5.7
+DATABASE_URL=mysql://tanguidaoudal1712:Zorglub2$@aa1nz20uu5lhixk.cdw6wpez9djy.eu-west-3.rds.amazonaws.com:3306/api_news?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
